--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,34 @@
 workDir = "${params.output}/work"
 NXF_CACHE_DIR = "${params.output}"
 
-params.read_length = 150
-params.qualified_quality_phred = 15
-params.unqualified_percent_limit = 45
-params.length_required = 35
-params.threads = 4
+includeConfig 'local.config'
+
+params {
+    ercc = false
+    na = "rna"
+    cov_stats = './assets/reads_mapped_to_contigs.cov_stats'
+    params.read_length = 150
+    params.qualified_quality_phred = 15
+    params.unqualified_percent_limit = 45
+    params.length_required = 35
+    params.threads = 4
+}
+
+process {
+    executor = System.getenv('PBS_ENV') ? 'pbspro' : 'local' // Use PBS Pro if detected, otherwise run locally
+    cpus = 4                                                  
+    memory = '8 GB'                                           
+    time = '2h'                                               
+
+    withLabel: preprocessing {
+        cpus = 16             
+        memory = '64 GB'      
+        time = '12h'     
+    }
+}
+
+executor {
+    pbspro {
+        submitOptions = '-V'  // Pass environment variables to the job
+    }
+}
