megahit added, conditional process added for megahit empty file

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ includeConfig 'local.config'
 params {
     ercc = false
     na = "rna"
-    cov_stats = './assets/reads_mapped_to_contigs.cov_stats'
+    cov_stats = "${baseDir}/assets/reads_mapped_to_contigs.cov_stats"
     params.read_length = 150
     params.qualified_quality_phred = 15
     params.unqualified_percent_limit = 45
