add taxonomic classification

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
 }
 
 process {
+    //scratch = true
     executor = System.getenv('PBS_ENV') ? 'pbspro' : 'local' // Use PBS Pro if detected, otherwise run locally
     cpus = 4                                                  
     memory = '8 GB'                                           
@@ -25,7 +26,27 @@ process {
         memory = '64 GB'      
         time = '12h'     
     }
+
+    withLabel: taxonomic_classification {
+        cpus = 16             
+        memory = '72 GB'      
+        time = '12h'     
+    }
+
+    beforeScript = System.getenv('PBS_ENV') ? '''
+        module load fastp/0.20.0 # From base Gadi
+        module load prinseq++/1.2.4 # From ru33
+        module load kraken2/2.1.4 # From ru33
+        module load bowtie2/2.3.5.1 # From base Gadi
+        module load samtools/1.21 # From if89
+        module load bbmap/38.93 # From base Gadi
+        module load sambamba/0.8.1 # From base Gadi
+        module load megahit/1.2.9 # From ru33
+    ''' : null
 }
+
+
+
 
 executor {
     pbspro {
