adding entrez info

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,6 +7,7 @@ params {
     ercc = false
     na = "rna"
     cov_stats = "${baseDir}/assets/reads_mapped_to_contigs.cov_stats"
+    table_summary = "${baseDir}/assets/table_template.html"
     params.read_length = 150
     params.qualified_quality_phred = 15
     params.unqualified_percent_limit = 45
