--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ includeConfig 'local.config'
 
 params {
     ercc = false
+    ndata = null
     na = "rna"
     cov_stats = "${baseDir}/assets/reads_mapped_to_contigs.cov_stats"
     table_summary = "${baseDir}/assets/table_template.html"
