change workdir location

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,6 @@
-workDir = "${params.output}/work"
+def pair_id = new File(params.r1).name.split('_S')[0]
+
+workDir = "${params.output}/${pair_id}/work"
 NXF_CACHE_DIR = "${params.output}"
 
 includeConfig 'local.config'
