catching pair_id prefixes by _S then _R

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,9 @@
-def pair_id = new File(params.r1).name.split('_S')[0]
+def name = new File(params.r1).name
+def pair_id = name.contains('_S') ?
+            name.split('_S')[0] :
+            name.contains('_R') ?
+            name.split('_R')[0] :
+            name
 
 workDir = "${params.output}/${pair_id}/work"
 NXF_CACHE_DIR = "${params.output}"
